--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -1,3 +1,5 @@
-<h1>Create New Song</h1>
+<h1>Editing <%= @song.title %> by <%= @song.artist_name %></h1>
 
 <%= render 'song_form' %>
+
+<%= link_to 'Cancel Editing', @song %>
