--- a/app/views/songs/index.erb
+++ b/app/views/songs/index.erb
@@ -1,9 +1,32 @@
-<h1>All songs</h1>
+<h1>Songs</h1>
 
-<ul>
-  <% @songs.each do |s| %>
-    <li><%= link_to s.title, s %></li>
-  <% end %>
-</ul>
+<div><%= link_to 'Create Song', new_song_path %></div>
+<br />
 
-<%= link_to "Create New Song", new_song_path %>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Year</th>
+      <th>Genre</th>
+      <th>Artist name</th>
+      <th></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @songs.each do |song| %>
+      <tr>
+        <td><%= song.title %></td>
+        <td><%= song.release_year %></td>
+        <td><%= song.genre %></td>
+        <td><%= song.artist_name %></td>
+        <td>
+          <%= link_to 'View', song %> |
+          <%= link_to 'Edit', edit_song_path(song) %> |
+          <%= link_to 'Delete', song, method: :delete, data: { confirm: 'For real?' } %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
