--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,11 +1,15 @@
-<h1>Detail of <%= @song.title %></h1>
-
-<h3>Title: <%= @song.title %></h3>
-<h3>Released: <%= @song.released ? "Yes" : "Not yet" %></h3>
-<% if @song.released %>
-  <h3>Year: <%= @song.release_year %></h3>
+<h2><%= @song.title %></h2>
+by <strong><%= @song.artist_name %></strong>
+<% if @song.released? %>
+  <p>
+    Released in
+    <strong><%= @song.release_year %></strong>
+  </p>
 <% end %>
-<h3>Artist Name: <%= @song.artist_name %></h3>
-<h3>Genre: <%= @song.genre %></h3>
-<%= link_to "Back to All Songs", songs_path %>
-<%= link_to "Edit This Song", edit_song_path %>
+
+<p>
+  <strong>Genre:</strong>
+  <%= @song.genre %>
+</p>
+
+<%= link_to 'Edit', edit_song_path(@song) %>
